# CAVE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: util.h
include/ECS/: box_collider.h  camera.h  components.h  ecs.h  entity_manager.h  player.h  rigid_body.h  systems.h  transform.h
include/core/: block_marker.h  chunk_thread_pool.h  direction.h  io.h  keyboard.h  log.h  mouse.h  noise.h  state.h
include/data_structures/: array_list.h  cyclic_queue.h  hash_map.h  linked_list.h  list.h
include/ecs/: components.h  ecs.h  systems.h
include/graphics/: atlas.h  gizmos.h  mesh.h  mesh_buffer.h  model.h  shader.h  texture.h  texture_manager.h
include/world/: block.h  chunk.h  world.h
lib/cJSON/: cJSON.c
res/blocks/: 0.air.json  1.grass_block.json  2.dirt.json  3.stone.json  4.cobblestone.json  5.stone_slab.json  6.cobblestone_slab.json  cobblestone_4.json  cobblestone_slab_6.json  dirt_2.json  grass_block_1.json  stone_3.json  stone_slab_5.json
res/configs/: keys.json
res/models/: cube.json  slab_bottom.json  slab_north.json  slab_top.json
res/shaders/: block_marker.vert  chunk.frag  chunk.vert  gizmos.frag  gizmos.vert
src/: atlas.c  block.c  block_marker.c  camera.c  chunk.c  chunk_list.c  chunk_thread_pool.c  component.c  entity_manager.c  hash_map.c  io.c  linked_list.c  log.c  main.c  mesh.c  mesh_buffer.c  noise.c  player.c  shader.c  texture.c  transform.c  world.c
src/ECS/: camera.c  components.c  ecs.c  entity_manager.c  player.c  rigid_body.c  transform.c
src/core/: block_marker.c  cJSON.c  chunk_thread_pool.c  direction.c  io.c  keyboard.c  log.c  mouse.c  noise.c
src/data_structures/: array_list.c  cyclic_queue.c  hash_map.c  linked_list.c  list.c
src/ecs/: camera.c  components.c  ecs.c  player.c  rigid_body.c  transform.c
src/graphics/: atlas.c  gizmos.c  mesh.c  mesh_buffer.c  model.c  shader.c  texture.c  texture_manager.c
src/include/: atlas.h  block.h  block_marker.h  camera.h  chunk.h  chunk_list.h  chunk_thread_pool.h  entity_manager.h  hash_map.h  io.h  linked_list.h  log.h  mesh.h  mesh_buffer.h  noise.h  player.h  state.h  texture.h  transform.h  util.h  world.h
src/world/: block.c  chunk.c  world.c
